attach to elements for better persistence

--- a/apps/demo/index.html
+++ b/apps/demo/index.html
@@ -21,7 +21,25 @@
       </div>
     </header>
 
+    <!-- SPA Test Section -->
+    <div class="spa-test-banner">
+      <div class="container">
+        <h3>🧪 SPA Marker Tracking Test</h3>
+        <p>Add comments to elements below, then switch views to test marker tracking</p>
+        <div class="spa-nav">
+          <button class="spa-btn active" data-view="view1">View 1</button>
+          <button class="spa-btn" data-view="view2">View 2</button>
+          <button class="spa-btn" data-view="view3">View 3</button>
+        </div>
+      </div>
+    </div>
+
     <main>
+      <!-- Dynamic SPA Content Container -->
+      <div id="spa-content">
+        <!-- Views will be dynamically inserted here -->
+      </div>
+
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Welcome to Our Product</h1>
